<resources>
    <string name="app_name">E-Notice Board</string>
    <string name="header">Department Of Computer Science</string>
    <string name="header2">Assam University, Silchar</string>
    <string name="header3">E-Notice Board</string>
    <string name="hint_login_email">Enter email id</string>
    <string name="hint_login_pass">Enter password</string>
    <string name="submit_login_req">Log In</string>
    <string name="header_login">Sign In</string>
    <string name="redirect_sign_up">Don\'t have an account?  Sign Up</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="student_radio_button">Student</string>
    <string name="teacher_radio_button">Faculty</string>
    <string name="hello">Hello</string>
    <string name="pdf_download">Download PDF</string>
    <string name="logout_btn">Log Out</string>
    <string name="open_pdf_btn">View PDF</string>
</resources>
